--- a/www/category2.html
+++ b/www/category2.html
@@ -8,11 +8,15 @@
     <link rel="stylesheet" href="https://unpkg.com/onsenui/css/onsenui.css">
     <link rel="stylesheet" href="https://unpkg.com/onsenui/css/onsen-css-components.min.css">
     <script src="https://unpkg.com/onsenui/js/onsenui.min.js"></script>
-
+ <!-- Bootstrap CSS -->
+ <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+ <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 </head>
 <style>
     .bg {
-        background-color: RGB(255, 160, 122, 0.3);
+        background: #c9f3f8d2;
         background-repeat: no-repeat;
         background-attachment: scroll;
         overflow: scroll;
@@ -23,14 +27,13 @@
         border-radius: 30px;
         display: block;
         margin: 15px;
-        height: 615px;
+        height: 750px;
 
     }
 
     .div {
-
-        text-indent: 22px;
-        width: 380px;
+        text-indent: 3px;
+        width: 350px;
         height: 75px;
         font-size: 29px;
         font-weight: bold;
@@ -38,14 +41,17 @@
 
     .quick {
         float: left;
-        width: 90;
-        height: 95;
-        margin: 5px;
+        width: 90px;
+        height: 90px;
+        margin: 20px;
     }
 
     .clearfix {
-        overflow: auto;
+        width: 100px;
+        margin: 0 auto;
+        overflow: hidden;
     }
+
 
     .img {
         display: block;
@@ -55,11 +61,17 @@
         height: 95px;
 
     }
+
+    * {
+        padding: auto;
+        margin: auto;
+        text-align: center;
+    }
 </style>
 
 <body>
     <ons-page>
-        <ons-toolbar style="background-color:	LightCoral">
+        <ons-toolbar style="background: #00bcd5;">
 
             <div class="left">
                 <ons-icon size="45px" onclick="selectq()" icon="angle-left">
@@ -69,19 +81,24 @@
         <ons-page>
             <div class="bg">
                 <div class="bg1">
-                    <div class="clearfix">
-                        <img class="quick" src="img/brackets.png">
-                        <br><br>
-                        <div class="div">เทียนทัตนคลินิก</div>
+                    <div class="row">
+                        <!-- <img class="quick" src="img/tooth12.png" > -->
+                        <div class="div">
+                            <img class="quick" src="img/tooth.png"><br>TIEN DENTAL</div>
 
                     </div>
+                    <br>
+                    <br>
                     <hr>
                     <br>
                     <br>
                     <p style="text-align: center; margin-top: 10px;">เลือกใช้บริการ</p>
 
-                    <input class="form-control" style="text-align: center;" type="text" name="" id="type2"
-                        value="ทันตกรรมความงาม" disabled>
+
+                    <div class="form-group col-md-6">
+                        <input class="form-control" style="text-align: center; width: 300px; margin: auto;" type="text"
+                            name="" id="type2" value="ทันตกรรมความงาม" disabled></input>
+                    </div>
 
                     <br>
                     <select id="cate2" class="select-input select-input--material" style="display: block;
@@ -114,7 +131,7 @@
 
 
                 </div>
-                <ons-button style="background: SALMON;" modifier="large" onclick="queue()">จองคิว</ons-button>
+                <ons-button  style="background: #00bcd5;" modifier="large" onclick="queue()">จองคิว</ons-button>
             </div>
         </ons-page>
 </body>
@@ -133,10 +150,12 @@
 
         var status = localStorage.setItem('status', 0)
         var alert = localStorage.setItem('alert', 0)
+        var situation = localStorage.getItem("situation");
         var getLocalDate = localStorage.getItem("date");
         var getLocalTime = localStorage.getItem("time");
         var getLocalCategory2 = localStorage.getItem("category2");
         var getLocalStatus = localStorage.getItem("status");
+        var getLocalsituation = localStorage.getItem("situation");
         var getLocalalert = localStorage.getItem("alert");
         var getLocalCusID = localStorage.getItem("Index");
         var getLocalType2 = localStorage.getItem("type2");
@@ -146,15 +165,15 @@
         var settings = {
             "async": true,
             "crossDomain": true,
-            "url": "http://172.26.252.97:8080/book?BookID=" + null + "&start=" + getLocalDate + "&Time=" + getLocalTime + "&Detail=" + getLocalCategory2 + "&Status=" + getLocalStatus + "&Type=" + getLocalType2 + "&end=" + getLocalDate + "&alert=" + getLocalalert + "&CusID=" + getLocalCusID,
+            "url": "http://172.26.252.97:8080/book?BookID=" + null + "&start=" + getLocalDate + "&Time=" + getLocalTime + "&Detail=" + getLocalCategory2 + "&Status=" + getLocalStatus + "&Type=" + getLocalType2 + "&end=" + getLocalDate + "&alert=" + getLocalalert + "&situation=" + getLocalsituation + "&CusID=" + getLocalCusID,
             "method": "POST",
-  "headers": {
-    "Content-Type": "application/x-www-form-urlencoded",
-    "cache-control": "no-cache",
-    "Postman-Token": "887c9555-fc21-47d3-b46b-6eab6cea0a65"
-  },
-  "data": ""
-}
+            "headers": {
+                "Content-Type": "application/x-www-form-urlencoded",
+                "cache-control": "no-cache",
+                "Postman-Token": "887c9555-fc21-47d3-b46b-6eab6cea0a65"
+            },
+            "data": ""
+        }
 
 
         $.ajax(settings).done(function (response) {
