--- a/platforms/android/app/src/main/assets/www/index.html
+++ b/platforms/android/app/src/main/assets/www/index.html
@@ -45,7 +45,7 @@
                                 </ons-input>
                             </p>
                             <br>
-                            <ons-button style="background: #00bcd5;" modifier="medium" onclick="login()">LOGIN
+                            <ons-button style="background: #00bcd5;" modifier="medium" onclick="login()">เข้าสู่ระบบ
                             </ons-button>
                         </div>
                     </div>
