--- a/platforms/android/app/src/main/assets/www/signout.html
+++ b/platforms/android/app/src/main/assets/www/signout.html
@@ -41,7 +41,7 @@ integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw
                 <div style="text-align: center; margin-top: 50px;">
                     
                     <br>
-                    <ons-button style="background: #B22222" modifier="medium" onclick="signout()" >SIGN OUT</ons-button>
+                    <ons-button style="background: #B22222" modifier="medium" onclick="signout()" >ออกจากระบบ</ons-button>
                 </div>
             </div>
         </div>
