--- a/platforms/android/app/src/main/assets/www/category4.html
+++ b/platforms/android/app/src/main/assets/www/category4.html
@@ -28,7 +28,7 @@
             border-radius: 30px;
             display: block;
             margin: 15px;
-            height: 615px;
+            height: 520px;
     
         }
     
@@ -134,11 +134,13 @@
         var status = localStorage.setItem('status', 0)
         var alert = localStorage.setItem('alert', 0)
         var situation = localStorage.getItem("situation");
+        var dayofweek = localStorage.getItem("dayofweek");
         var getLocalDate = localStorage.getItem("date");
         var getLocalTime = localStorage.getItem("time");
         var getLocalCategory4 = localStorage.getItem("category4");
         var getLocalStatus = localStorage.getItem("status");
         var getLocalsituation = localStorage.getItem("situation");
+        var getLocaldayofweek = localStorage.getItem("dayofweek");
         var getLocalalert = localStorage.getItem("alert");
         var getLocalCusID = localStorage.getItem("Index")
         var getLocalType4 = localStorage.getItem("type4");
@@ -148,7 +150,7 @@
         var settings = {
             "async": true,
             "crossDomain": true,
-            "url": "http://172.26.252.97:8080/book?BookID=" + null + "&start=" + getLocalDate + "&Time=" + getLocalTime + "&Detail=" + getLocalCategory4 + "&Status=" + getLocalStatus + "&Type=" + getLocalType4 + "&end=" + getLocalDate + "&alert=" + getLocalalert +"&situation=" + getLocalsituation + "&CusID=" + getLocalCusID,
+            "url": "http://172.26.252.97:8080/book?BookID=" + null + "&start=" + getLocalDate + "&Time=" + getLocalTime + "&Detail=" + getLocalCategory4 + "&Status=" + getLocalStatus + "&Type=" + getLocalType4 + "&end=" + getLocalDate + "&alert=" + getLocalalert +"&situation=" + getLocalsituation +"&dayofweek=" + getLocaldayofweek + "&CusID=" + getLocalCusID,
             "method": "POST",
   "headers": {
     "Content-Type": "application/x-www-form-urlencoded",
