--- a/platforms/android/app/src/main/assets/www/category5.html
+++ b/platforms/android/app/src/main/assets/www/category5.html
@@ -28,7 +28,7 @@
             border-radius: 30px;
             display: block;
             margin: 15px;
-            height: 750px;
+            height: 520px;
     
         }
     
@@ -132,12 +132,14 @@
         var status = localStorage.setItem('status', 0)
         var alert = localStorage.setItem('alert', 0)
         var situation = localStorage.getItem("situation");
+        var dayofweek = localStorage.getItem("dayofweek");
         var getLocalDate = localStorage.getItem("date");
         var getLocalTime = localStorage.getItem("time");
         var getLocalCategory5 = localStorage.getItem("category5");
         var getLocalStatus = localStorage.getItem("status");
         var getLocalalert = localStorage.getItem("alert");
         var getLocalsituation = localStorage.getItem("situation");
+        var getLocaldayofweek = localStorage.getItem("dayofweek");
         var getLocalCusID = localStorage.getItem("Index")
         var getLocalType5 = localStorage.getItem("type5");
         // var Last_BookID = localStorage.getItem("last_BookID");
@@ -146,7 +148,7 @@
         var settings = {
             "async": true,
             "crossDomain": true,
-            "url": "http://172.26.252.97:8080/book?BookID=" + null + "&start=" + getLocalDate + "&Time=" + getLocalTime + "&Detail=" + getLocalCategory5 + "&Status=" + getLocalStatus + "&Type=" + getLocalType5 + "&end=" + getLocalDate + "&alert=" + getLocalalert +"&situation=" + getLocalsituation + "&CusID=" + getLocalCusID,
+            "url": "http://172.26.252.97:8080/book?BookID=" + null + "&start=" + getLocalDate + "&Time=" + getLocalTime + "&Detail=" + getLocalCategory5 + "&Status=" + getLocalStatus + "&Type=" + getLocalType5 + "&end=" + getLocalDate + "&alert=" + getLocalalert +"&situation=" + getLocalsituation +"&dayofweek=" + getLocaldayofweek + "&CusID=" + getLocalCusID,
             "method": "POST",
   "headers": {
     "Content-Type": "application/x-www-form-urlencoded",
