--- a/www/category3.html
+++ b/www/category3.html
@@ -27,7 +27,7 @@
             border-radius: 30px;
             display: block;
             margin: 15px;
-            height: 750px;
+            height: 520px;
     
         }
     
@@ -129,12 +129,14 @@
         var status = localStorage.setItem('status', 0)
         var alert = localStorage.setItem('alert', 0)
         var situation = localStorage.getItem("situation");
+        var dayofweek = localStorage.getItem("dayofweek");
         var getLocalDate = localStorage.getItem("date");
         var getLocalTime = localStorage.getItem("time");
         var getLocalCategory3 = localStorage.getItem("category3");
         var getLocalStatus = localStorage.getItem("status");
         var getLocalalert = localStorage.getItem("alert");
         var getLocalsituation = localStorage.getItem("situation");
+        var getLocaldayofweek = localStorage.getItem("dayofweek");
         var getLocalCusID = localStorage.getItem("Index")
         var getLocalType3 = localStorage.getItem("type3");
         // var Last_BookID = localStorage.getItem("last_BookID");
@@ -143,7 +145,7 @@
         var settings = {
             "async": true,
             "crossDomain": true,
-            "url": "http://172.26.252.97:8080/book?BookID=" + null + "&start=" + getLocalDate + "&Time=" + getLocalTime + "&Detail=" + getLocalCategory3 + "&Status=" + getLocalStatus + "&Type=" + getLocalType3 + "&end=" + getLocalDate + "&alert=" + getLocalalert +"&situation=" + getLocalsituation + "&CusID=" + getLocalCusID,
+            "url": "http://172.26.252.97:8080/book?BookID=" + null + "&start=" + getLocalDate + "&Time=" + getLocalTime + "&Detail=" + getLocalCategory3 + "&Status=" + getLocalStatus + "&Type=" + getLocalType3 + "&end=" + getLocalDate + "&alert=" + getLocalalert +"&situation=" + getLocalsituation +"&dayofweek=" + getLocaldayofweek+ "&CusID=" + getLocalCusID,
             "method": "POST",
   "headers": {
     "Content-Type": "application/x-www-form-urlencoded",
