--- a/www/dating.html
+++ b/www/dating.html
@@ -138,7 +138,9 @@ integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw
                     '<div class="clearfix">' +
                     '<p><img class="quick" src="img/health-report.png" width="50"' +
                     'height="50">' +
-                    "วันที่ : " + loop[j].start + '<br>' + "ประเภท : " + loop[j].Type + '<br>' + "รายละเอียด : " + loop[j].Detail + '</p>' +
+                    '<div>'+
+                    "วันที่ : " + loop[j].start + '<br>' + " เวลา : " + loop[j].Time + '<br>' + "  ประเภท : " + loop[j].Type + '<br>' + " รายละเอียด : " + loop[j].Detail + '</p>' +
+                    '</div>'+
                     '</div>' +
                     '</ons-col>' +
                     '</ons-row>'
