--- a/platforms/android/app/src/main/assets/www/index.html
+++ b/platforms/android/app/src/main/assets/www/index.html
@@ -61,7 +61,7 @@
         <!-- เทสnotification  -->
 
         <!-- <button onclick="myFunction()">notification</button> -->
-        <button onclick="testnoti()">noti</button>
+        <!-- <button onclick="testnoti()">noti</button>
         </div>
 
         <script>
@@ -113,7 +113,7 @@ function scheduleAlarm(){
                 });
             }
 
-        </script>
+        </script> -->
 
 
 
@@ -123,7 +123,7 @@ function scheduleAlarm(){
         var settings = {
             "async": true,
             "crossDomain": true,
-            "url": "http://172.26.252.97:8080/customer/",
+            "url": "http://172.26.200.73:8080/customer/",
             "method": "GET",
             "headers": {
                 "cache-control": "no-cache",
