--- a/platforms/android/app/src/main/assets/www/selectdate.html
+++ b/platforms/android/app/src/main/assets/www/selectdate.html
@@ -115,10 +115,10 @@
                             <br>
                             <input id="datepicker" width="250">
                             <script>
-                                    var today = new Date();
+                                    // var today = new Date();
                                     $('#datepicker').datepicker({
                                       format: "yyyy-mm-dd", // แสดงวันด้วย DD คือวันอะไร จ-ศ 
-                                      minDate: today,
+                                    //   minDate: today,
                                     });
                             </script>
                         </body>
