--- a/platforms/android/app/src/main/assets/www/dating.html
+++ b/platforms/android/app/src/main/assets/www/dating.html
@@ -113,7 +113,7 @@ integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw
     var settings = {
         "async": true,
         "crossDomain": true,
-        "url": "http://172.26.252.97:8080/book",
+        "url": "http://172.26.200.73:8080/book",
         "method": "GET",
         "headers": {
             "Content-Type": "application/x-www-form-urlencoded",
@@ -128,7 +128,7 @@ integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw
         var html = "";
         for (let j = 0; j < loop.length; j++) {
 
-            if (getItemCus == loop[j].CusID) {
+            if (getItemCus == loop[j].CusID && loop[j].situation==0 ) {
                 console.log(" Loop_Fname 1: " + loop[j].BookID);
 
                 $('#show').append(
@@ -158,7 +158,7 @@ integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw
     var settings1 = {
         "async": true,
         "crossDomain": true,
-        "url": "http://172.26.252.97:8080/customer",
+        "url": "http://172.26.200.73:8080/customer",
         "method": "GET",
         "headers": {
             "Content-Type": "application/x-www-form-urlencoded",
